WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103476
[GTK] [WebKit2] WebKitWebViewBase creates a GL context for the redirected XComposite window crashing WebKit in Xvfb
https://bugs.webkit.org/show_bug.cgi?id=103476
Summary
[GTK] [WebKit2] WebKitWebViewBase creates a GL context for the redirected XCo...
Martin Robinson
Reported
2012-11-27 18:43:58 PST
WebKitWebViewBase creates a GL context for the redirected XComposite window crashing WebKit in Xvfb. This is a result of sharing the RedirectedXComposite window implementation between WebKit1 and WebKit2. In WebKit2, we should not create a GLXContext during resize events.
Attachments
Patch
(6.55 KB, patch)
2012-11-29 12:32 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-11-29 12:32:33 PST
Created
attachment 176789
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-29 12:38:17 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Alejandro G. Castro
Comment 3
2012-11-29 14:44:22 PST
Comment on
attachment 176789
[details]
Patch LGTM
WebKit Review Bot
Comment 4
2012-11-29 14:59:58 PST
Comment on
attachment 176789
[details]
Patch Rejecting
attachment 176789
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: commit-queue/Source/WebKit/chromium/third_party/v8-i18n --revision 159 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 51>At revision 159. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/15044467
Martin Robinson
Comment 5
2012-11-29 22:42:24 PST
Comment on
attachment 176789
[details]
Patch Clearing flags on attachment: 176789 Committed
r136207
: <
http://trac.webkit.org/changeset/136207
>
Martin Robinson
Comment 6
2012-11-29 22:42:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug