[GTK] [WebKit2] WebKitWebViewBase creates a GL context for the redirected XComposite window crashing WebKit in Xvfb https://bugs.webkit.org/show_bug.cgi?id=103476

Reviewed by Alejandro G. Castro.

Source/WebCore:

Allow creation of RedirectedXCompositeWindow in a mode which does not have a backing
GLContext. For WebKit2 the GLContext is always in the WebProcess. Creating the GLContext
in both processes can cause crashes when library is run in Xvfb.

No new tests. This fixes a crash running tests on some systems.

* platform/gtk/RedirectedXCompositeWindow.cpp:
(WebCore::RedirectedXCompositeWindow::RedirectedXCompositeWindow):
(WebCore::RedirectedXCompositeWindow::resize): Do not create the GLContext when
in the new no-GLContext mode.
(WebCore::RedirectedXCompositeWindow::context): ASSERT that we are not in
no-GLContext mode.

Source/WebKit2:

Create the RedirectedXCompositeWindow with an argument specifying that it
should never have a GLContext backing it.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(_WebKitWebViewBasePrivate::_WebKitWebViewBasePrivate):

Canonical link: https://commits.webkit.org/121820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136207 268f45cc-cd09-0410-ab3c-d52691b4dbfc